Add metrics.